# openboard

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRACT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  install.sh  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
.openboard/: project
agents/: .gitkeep
artifacts/: .gitkeep
board/: digest.md
board/agents/: claude.md  codex.md  cursor.md  grok.md
board/decisions/: 0001-phase1-cli.md  0002-reconcile-claims-and-hierarchy.md  0003-phase1-mvp-integrated.md  0004-tier2-scope.md  0005-tier2-integrated.md  0006-tier2-complete.md  0007-display-and-stabilization.md  0008-tier3-objective-and-competing-results.md  0009-private-holdout.md  0010-tier3-surface-parity.md  0011-hooks-auto-join-sync.md  0012-cold-start-portability.md  0013-brief-join-doctor.md  0014-oss-readiness.md  0015-git-transport.md  0016-mcp-distribution.md  (+1 more)
docs/: USAGE.md  board-cli-spec-tier2.md  board-cli-spec-tier3.md  board-cli-spec.md  hooks.md  onboarding.md  transport.md
hooks/: hooks.json
mcp/: README.md  server.py  smoke_test.py  spec_gaps.md
tasks/: TASK-001-example.md  TASK-001-selftest.md  TASK-002-coldstart.md  TASK-003-git-transport.md  TASK-004-mcp-distribution.md
templates/: agent-bootstrap.md  result-template.md  task-template.md  task.md  verifier.sh
tests/: board-hook-test.sh  board-view-test.sh  run-coldstart.sh  run-holdout.sh  run-tier2.sh  run-tier3.sh  run-transport.sh  run.sh
verifiers/: TASK-001-selftest.sh  TASK-002-coldstart.sh
(+47 files in other folders)
